# vim-config

./: .gitignore  .gitmodules  README.md  mappings.vim  settings.vim  variables.vim  vimrc
autoload/: greek.json  tex.vim
config/: mappings.vim  settings.vim  variables.vim
doc/: own.txt  tags
ftdetect/: make.vim
ftplugin/: cpp.vim  markdown.vim  python.vim  tex.vim  txt.vim
plugin/: grep-operator.vim
templates/: CMakeLists.txt  Makefile  Makefile.cpp  Makefile.tex  clang-format  cpp.tmpl  skeleton.html  skeleton.tex  tex.tmpl
